--- a/src/components/Header/mainheader.module.scss
+++ b/src/components/Header/mainheader.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
 
 .mainheader {
-    padding: 2rem;
+    padding: 1rem;
 
     &__container {
         max-width: 1200px;
@@ -84,6 +84,7 @@
         font-size: 20px;
         font-family: Gilroy;
         line-height: 160%;
+        width: 75%;
     }
 
 button {
