--- a/src/components/TakeAway/takeaway.module.scss
+++ b/src/components/TakeAway/takeaway.module.scss
@@ -4,8 +4,6 @@
     
 .takeaway {
 
-    background: linear-gradient(180deg, rgba(255, 148, 1, 0.05) 0%, rgba(255, 237, 211, 0.00) 100%);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     min-height: 686px;
     margin-top: 128px;
     
@@ -62,6 +60,7 @@
         }
 
  display: flex;
+ flex-wrap: wrap;
     }
 
 }
