--- a/src/components/Testimonial/testimonial.module.scss
+++ b/src/components/Testimonial/testimonial.module.scss
@@ -4,9 +4,6 @@
 
 .testimonial {
 
-    background: linear-gradient(180deg, rgba(255, 148, 1, 0.05) 0%, rgba(255, 237, 211, 0.00) 100%);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    min-height: 686px;
     margin-top: 128px;
 
 
@@ -16,10 +13,10 @@
 
         &__wrapper {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
             flex-direction: row-reverse;
+            padding: 1rem;
 
 
         }
@@ -27,12 +24,11 @@
 }
 
 .title {
-    width: 40%;
 
     h1 {
         @font-face {
             font-family: Gilroy;
-            src: url('../../../public/fonts/Gilroy-ExtraBold.otf');
+            src: url('../../../public/fonts/Gilroy-Light.otf');
         }
 
         color: #2E2E2E;
@@ -40,6 +36,7 @@
         font-family: Gilroy;
         font-weight: 700;
         line-height: 60px;
+        width: 70%;
     }
 
     &__about {
@@ -58,22 +55,19 @@
         font-style: italic;
         font-weight: 500;
         line-height: 160%;
+        width: 60%;
     }
 
     &__review {
         margin-top: 45px;
-
+        font-family: Gilroy;
+        
     }
 
 }
 
 .image {
-    position: relative;
+    width: 100%;
+    
 
-    &__ketchup {
-        position: absolute;
-        left: 250px;
-        bottom: -80px;
-
-    }
 }
