--- a/src/components/Features/features.module.scss
+++ b/src/components/Features/features.module.scss
@@ -36,9 +36,10 @@
 
         &__items {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             flex-wrap: wrap;
+            column-gap: 5rem;
         }
     }
 }
@@ -50,7 +51,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 20%;
+    width: 245px;
 
     h1 {
         margin-top: 50px;
