--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -15,8 +15,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-
-            
+        
         }
     }
 }
@@ -62,6 +61,13 @@
         padding: 1rem 2rem;
         font-family: 'Playfair Display';
     }
+
+    @media (max-width:990px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 
@@ -69,4 +75,13 @@
 
 width: 100%;
 
+
 }
+
+
+@media (max-width:990px) {
+    .image {
+        display: none;
+    }
+
+ }
