--- a/src/components/Header/mainheader.module.scss
+++ b/src/components/Header/mainheader.module.scss
@@ -2,6 +2,7 @@
 
 .mainheader {
     padding: 1rem;
+    
 
     &__container {
         max-width: 1200px;
@@ -40,11 +41,33 @@
             right: -20px;
         }
 
+        @media (max-width:990px) {
+    display: none;
+        }
+
     }
+
 
 }
 
 .title {
+
+
+    &__text {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+
+        &_img {
+            display: flex;
+            align-items: center;
+        }
+
+        @media (max-width:990px) {
+            justify-content: center;
+        }
+    }
+   
     @font-face {
         font-family: 'Gilroy';
         src: url('../../../public/fonts/Gilroy-ExtraBold.otf');
@@ -56,6 +79,7 @@
         font-family: Gilroy;
         font-weight: 800;
         line-height: 108px;
+
     }
 
     &__restaurant {
@@ -95,6 +119,13 @@ margin-top: 44px;
 color: #fff;
 font-size: 20px ;
 font-family: 'Playfair Display';
+
+}
+@media (max-width:990px) {
+display: flex;
+flex-direction: column;
+align-items: center;
+
 
 }
 }
