--- a/src/components/Testimonial/testimonial.module.scss
+++ b/src/components/Testimonial/testimonial.module.scss
@@ -64,10 +64,19 @@
         
     }
 
+    @media (max-width:990px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
 }
 
 .image {
     width: 100%;
     
-
+@media (max-width:990px) {
+    display: none
+}
 }
